@@ -19,6 +19,8 @@
 
 */
 
+define('IDENTITIES_LEVEL', intval($RCMAIL->config->get('identities_level', 0)));
+
 $OUTPUT->set_pagetitle(rcube_label('identities'));
 
 $OUTPUT->include_script('list.js');
@@ -40,6 +42,7 @@ function rcmail_identity_frame($attrib)
   }
 
 $OUTPUT->add_handler('identityframe', 'rcmail_identity_frame');
+$OUTPUT->set_env('identities_level', IDENTITIES_LEVEL);
 
 $OUTPUT->send('identities');
 ?>
