@@ -17,7 +17,7 @@
 </div>
 
 <p id="listbuttons">
-<roundcube:button command="add" type="input" label="newidentity" class="button" condition="config:multiple_identities:true" />
+<roundcube:button command="add" type="input" label="newidentity" class="button" condition="config:identities_level:0<2" />
 </p>
 
 <div id="identity-details">
